syntax = "proto3";

package video;

service VideoService {
  rpc CreateVideo (CreateVideoRequest) returns (VideoResponse);
  rpc GetVideo (GetVideoRequest) returns (VideoResponse);
  rpc GetFeed (GetFeedRequest) returns (FeedResponse);
  rpc GetUserVideos (GetUserVideosRequest) returns (FeedResponse);
  rpc SearchVideos (SearchVideosRequest) returns (FeedResponse);
  rpc UpdateVideoStats (UpdateVideoStatsRequest) returns (VideoResponse);
  rpc DeleteVideo (DeleteVideoRequest) returns (DeleteVideoResponse);
}

message CreateVideoRequest {
  string userId = 1;
  string title = 2;
  string description = 3;
  string videoUrl = 4;
  string thumbnailUrl = 5;
  int32 duration = 6;
}

message GetVideoRequest {
  string videoId = 1;
}

message GetFeedRequest {
  string userId = 1;
  int32 page = 2;
  int32 limit = 3;
}

message UpdateVideoStatsRequest {
  string videoId = 1;
  int64 views = 2;
  int32 likes = 3;
  int32 comments = 4;
}

message DeleteVideoRequest {
  string videoId = 1;
  string userId = 2;
}

message DeleteVideoResponse {
  bool success = 1;
}

message GetUserVideosRequest {
  string userId = 1;
  int32 page = 2;
  int32 limit = 3;
}

message SearchVideosRequest {
  string query = 1;
  int32 page = 2;
  int32 limit = 3;
}

message VideoResponse {
  string id = 1;
  string userId = 2;
  string title = 3;
  string description = 4;
  string videoUrl = 5;
  string thumbnailUrl = 6;
  int32 duration = 7;
  int64 views = 8;
  int32 likes = 9;
  int32 comments = 10;
  string createdAt = 11;
  UserSummary user = 12;
}

message UserSummary {
  string id = 1;
  string username = 2;
  string fullName = 3;
  string avatar = 4;
}

message FeedResponse {
  repeated VideoResponse videos = 1;
  int32 total = 2;
  int32 page = 3;
  int32 limit = 4;
  bool hasMore = 5;
}
